# osiris2

./: LICENSE.md  README.md  bio.deb  index.html  install.com  install.sh  osiris  osiris.inst  osiris.sh  osiris2release.deb  share.sh
DEBIAN/: O2ON3  o2  osiris2.deb
DOCS/: .osiris_man.md.swp  CRO.plang.ai  CRO_MANUAL.md  ContextModularDyn.ai.md  IGPA.ai.md  Linux.Multiprocecorehurdmodlinuxorkestor.md  MANUAL_OSIRIS_DOCS.md  Osiris-OZONE-Verified.amn.ai  Protocolos.DEV.ai.md  Shelly.desvario.ai.md  altri.ai.md  altri.cel.ai.md  altri.euc.ai.md  ar.benefits.ai.md  ar.desfalco.ai.md  bck01.ai.md  bck03.ai.md  com.create.md  comparativa-twitter-google.net.ai.md  contextoDinamico.ai.md  contextoLineal_*.ai.md  duncontext.cro.man.ai.md  dyncontext.function.py.ai.md  fugadatosvpn.md  ods.image.ai.md  ods.manual.ai.md  osiris-protocol-dev.ai.md  osiris.IASCREEN.md  osiris.ods.man.md  osiris2.man.md  osiris2G.AI.md  osiris2tmux.md  osiris_man.md  ppkeys.ai.md  proactiva.ai
html/: index.html  index.php
seed/: Makefile  README.md  adquiere_quickjs.sh  bottv-opt.sh  bottv2.sh  forge_semilla.sh  inyector.sh  inyector_videourl.sh  launch_osiris.sh  osiris_telemetry_v2.sh  performance.sh  quickjs-2025-09-13-2.tar.xz.1  stress_test.fgn  (+1 more)
seed/aichat_server/: Cargo.toml
seed/aichat_server/src/: client.rs  commands.rs.bak  config.rs  config.rs.bak  cro.rs  db.rs  logger.rs  main.rs  main.rs.bak  ollama.rs.bak  profile.rs  protocol.rs  session.rs  social.rs  types.rs
seed/aichat_server/src/commands/: ai.rs  auth.rs  chat.rs  external.rs  mod.rs  system.rs
seed/aichat_server/src/ollama/: mod.rs
seed/aichat_server/src/utils/: mod.rs
seed/cerebro_semilla/: Cargo.toml
seed/cerebro_semilla/src/: main.rs
seed/cerebro_semilla/src/ai/: trainer.rs
seed/cerebro_semilla/src/controller/: scale.rs
seed/cerebro_semilla/src/network/: protocol.rs
seed/cerebro_semilla/src/security/: signer.rs
seed/cerebro_semilla/src/video/: filtros_catalogo.rs  maniobra.rs  mod.rs  monitor.rs
(+158 files in other folders)
