[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21" }
tungstenite        = { version = "0.21" }
futures-util       = "0.3"
chrono             = "0.4"
env_logger         = "0.10"
log                = "0.4"
uuid               = { version = "1", features = ["v4"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
rand               = "0.8"
reqwest            = { version = "0.11", features = ["json"] }
lazy_static        = "1.4"
anyhow             = "1.0"
url                = "2"
async-trait        = "0.1"

# --- IDENTIDAD ---
# rusqlite: SQLite embebido. bundled = compila sqlite estáticamente (sin dep. de sistema)
rusqlite = { version = "0.31", features = ["bundled"] }
# bcrypt: hash seguro de contraseñas
bcrypt   = "0.15"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

#compilar:
# sudo /root/.cargo/bin/cargo +nightly build --release


