[package]
name = "cerebro_semilla"
version = "2.0.0"
edition = "2021"

[dependencies]
indicatif = "0.17"
console = "0.15"
tokio = { version = "1", features = ["full"] }
nix = { version = "0.27", features = ["signal"] }
# Serialización para el protocolo espejo
serde = { version = "1.0", features = ["derive"] }
# Gestión de memoria eficiente
bytes = "1.0"