[package]
name = "cerebro_semilla"
version = "2.0.0"
edition = "2021"

[dependencies]
indicatif = "0.17"
console = "0.15"
tokio = { version = "1", features = ["full"] }
nix = { version = "0.27", features = ["signal"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0"
# Fase 2B: HMAC-SHA256 para autenticacion de paquetes
hmac = "0.12"
sha2 = "0.10"
getrandom = "0.2"